add test class